# lung_cancer

./: data_using.xlsx  image_anno_TASK_1249.csv  series_anno_TASK_1249.csv
alphapathology_bk/Pathology/Pathoutils/: CMakeLists.txt  Pathoutils.cpp  Pathoutils.h  Pathoutils_export.h
alphapathology_bk/Pathology/Pathoutils/inc/: IFPipelinePathologyUtilsIn.h  IFPipelinePathologyUtilsOut.h  InferLocalPathologyUtils.h  PipelineElementPathologyUtilsCls.h  PipelinePathologyUtils.h  PipelinePathologyUtilsFactory.h  PipelinePathologyUtilsFactory_export.h  PipelinePathologyUtils_export.h
alphapathology_bk/Pathology/Pathoutils/src/: IFPipelinePathologyUtilsIn.cpp  InferLocalPathologyUtils.cpp  PipelineElementPathologyUtilsCls.cpp  PipelinePathologyUtils.cpp  PipelinePathologyUtilsFactory.cpp
alphapathology_bk/Pathology/Pathoutils/test/: PipelinePathologyUtilsTest.cpp
alphapathology_bk/common/base/: CMakeLists.txt
alphapathology_bk/common/base/inc/: DataInferBase.h  DataObj.h  IFBase.h  IFPipelineImagesIn.h  InferBase.h  InferLocalBase.h  PipelineAlgorithmBase.h  PipelineAlgorithmExecutor.h  PipelineBase.h  PipelineElementAlgorithmBase.h  PipelineElementAlgorithmMachineLearningBase.h  PipelineElementBase.h  PipelineFactoryBase.h
alphapathology_bk/common/evaluation/: CMakeLists.txt
alphapathology_bk/common/evaluation/inc/: EvaluationAlg.h  EvaluationAlg_export.h  EvaluationExceptionList.h
alphapathology_bk/common/evaluation/src/: EvaluationAlg.cpp
alphapathology_bk/common/utils/: CMakeLists.txt
alphapathology_bk/common/utils/inc/: CommonExceptionList.h  CommonUtils.h  CommonUtils_export.h
alphapathology_bk/common/utils/src/: CommonUtils.cpp
alphapathology_bk/ptFeiai/ptFeiaiCls/: CMakeLists.txt
alphapathology_bk/ptFeiai/ptFeiaiCls/inc/: AIThread.h  IFPipelinePathologyFEIAIIn.h  IFPipelinePathologyFEIAIOut.h  InferLocalPathologyFEIAI.h  IoThread.h  PipelineElementPathologyFEIAICls.h  PipelinePathologyFEIAI.h  PipelinePathologyFEIAIFactory.h  PipelinePathologyFEIAI_export.h
alphapathology_bk/ptFeiai/ptFeiaiCls/src/: AIThread.cpp  IFPipelinePathologyFEIAIIn.cpp  InferLocalPathologyFEIAI.cpp  IoThread.cpp  PipelineElementPathologyFEIAICls.cpp  PipelinePathologyFEIAI.cpp  PipelinePathologyFEIAIFactory.cpp
alphapathology_bk/ptFeiai/ptFeiaiCls/test/: PipelinePathologyFEIAITest.cpp
alphapathology_bk/ptLungCancer/ptLungCancercls/: CMakeLists.txt
alphapathology_bk/ptLungCancer/ptLungCancercls/inc/: AIThread.h  IFPipelinePathologyLungCancerIn.h  IFPipelinePathologyLungCancerOut.h  InferLocalPathologyLungCancer.h  IoThread.h  PipelineElementPathologyLungCancerCls.h  PipelinePathologyLungCancer.h  PipelinePathologyLungCancerFactory.h  PipelinePathologyLungCancer_export.h
alphapathology_bk/ptLungCancer/ptLungCancercls/src/: AIThread.cpp  IFPipelinePathologyLungCancerIn.cpp  InferLocalPathologyLungCancer.cpp  IoThread.cpp  PipelineElementPathologyLungCancerCls.cpp  PipelinePathologyLungCancer.cpp  PipelinePathologyLungCancerFactory.cpp
alphapathology_bk/ptLungCancer/ptLungCancercls/test/: PipelinePathologyLungCancerTest.cpp
alphapathology_bk/ptPDL1/ptPDL1cls/: CMakeLists.txt
alphapathology_bk/ptPDL1/ptPDL1cls/inc/: IFPipelinePathologyPDL1In.h  IFPipelinePathologyPDL1Out.h  InferLocalPathologyPDL1.h  PipelineElementPathologyPDL1Cls.h  PipelinePathologyPDL1.h  PipelinePathologyPDL1Factory.h  PipelinePathologyPDL1_export.h
alphapathology_bk/ptPDL1/ptPDL1cls/src/: IFPipelinePathologyPDL1In.cpp  InferLocalPathologyPDL1.cpp  PipelineElementPathologyPDL1Cls.cpp  PipelinePathologyPDL1.cpp  PipelinePathologyPDL1Factory.cpp
alphapathology_bk/ptPDL1/ptPDL1cls/test/: PipelinePathologyPDL1Test.cpp
alphapathology_bk/ptROSE/ptROSECls/: CMakeLists.txt
alphapathology_bk/ptROSE/ptROSECls/inc/: AIThread.h  IFPipelinePathologyIn.h  IFPipelinePathologyROSEOut.h  IOThread.h  InferLocalPathologyROSE.h  PipelineElementPathologyROSECls.h  PipelinePathologyROSE.h  PipelinePathologyROSEFactory.h  PipelinePathologyROSEFactory_export.h  PipelinePathologyROSE_export.h
alphapathology_bk/ptROSE/ptROSECls/src/: AIThread.cpp  IFPipelinePathologyIn.cpp  IOThread.cpp  InferLocalPathologyROSE.cpp  PipelineElementPathologyROSECls.cpp  PipelinePathologyROSE.cpp  PipelinePathologyROSEFactory.cpp
alphapathology_bk/ptROSE/ptROSECls/test/: PipelinePathologyROSETest.cpp
alphapathology_bk/ptTCT/ptTCTMIL/: CMakeLists.txt
alphapathology_bk/ptTCT/ptTCTMIL/inc/: AIThread.h  IFPipelinePathologyTCTIn.h  IFPipelinePathologyTCTOut.h  InferLocalPathologyTCT.h  IoThread.h  PipelineElementPathologyTCTCls.h  PipelinePathologyTCT.h  PipelinePathologyTCTFactory.h  PipelinePathologyTCT_export.h
alphapathology_bk/ptTCT/ptTCTMIL/src/: AIThread.cpp  IFPipelinePathologyTCTIn.cpp  InferLocalPathologyTCT.cpp  IoThread.cpp  PipelineElementPathologyTCTCls.cpp  PipelinePathologyTCT.cpp  PipelinePathologyTCTFactory.cpp
alphapathology_bk/ptTCT/ptTCTMIL/test/: PipelinePathologyTCTTest.cpp
alphapathology_bk/ptVirus/ptVirusCls/: CMakeLists.txt
alphapathology_bk/ptVirus/ptVirusCls/inc/: IFPipelinePathologyVirusIn.h  IFPipelinePathologyVirusOut.h  IFPipelinePathologyVirusTemp.h  InferLocalPathologyVirus.h  PipelineElementPathologyVirusCls.h  PipelineElementPathologyVirusPostProc.h  PipelinePathologyVirus.h  PipelinePathologyVirusFactory.h  PipelinePathologyVirusFactory_export.h  PipelinePathologyVirus_export.h
alphapathology_bk/ptVirus/ptVirusCls/src/: IFPipelinePathologyVirusIn.cpp  InferLocalPathologyVirus.cpp  PipelineElementPathologyVirusCls.cpp  PipelineElementPathologyVirusPostProc.cpp  PipelinePathologyVirus.cpp  PipelinePathologyVirusFactory.cpp
alphapathology_bk/ptVirus/ptVirusCls/test/: PipelinePathologyVirusTest.cpp
alphapathology_bk/ptXS/ptXScls/: CMakeLists.txt
alphapathology_bk/ptXS/ptXScls/inc/: AIThread.h  IFPipelinePathologyXSIn.h  IFPipelinePathologyXSOut.h  InferLocalPathologyXS.h  IoThread.h  PipelineElementPathologyXSCls.h  PipelinePathologyXS.h  PipelinePathologyXSFactory.h  PipelinePathologyXS_export.h
alphapathology_bk/ptXS/ptXScls/src/: AIThread.cpp  IFPipelinePathologyXSIn.cpp  (+5 more)
(+177 files in other folders)
